Updated login component

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -30,3 +30,10 @@
 .my-label {
     font-size: 15px !important;
 }
+
+img {
+    align-items: center;
+    width: auto;
+    margin: auto;
+    display: block;
+}
